# SMESH

./: .gitignore  CMakeLists.txt  README.md  prepare.py
.github/workflows/: ci.yml
ci/conda/: build.sh  meta.yaml  run_test.sh
cmake/: SMESHConfig.cmake.in
cmake/Kernel/: CMakeLists.txt
cmake/Netgen/: CMakeLists.txt  generate_version_file.cmake
cmake/SMESH/: CMakeLists.txt
patch/: NETGENPlugin.patch  NETGENPlugin_2D_ONLY.patch  NETGENPlugin_Mesher.patch  SMESH_Control.patch  SMESH_ControlPnt.patch  SMESH_Mesh.patch  SMESH_MeshEditor.patch  SMESH_SMDS.patch  SMESH_SMESHUtils.patch  SMESH_StdMeshers_Adaptive1D.patch  SMESH_StdMeshers_Projection_2D.patch  SMESH_StdMeshers_ViscousLayers.patch  geom.patch
src/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: Catch.t.cpp  MEFISTO2.t.cpp  NETGENPlugin.t.cpp  StdMeshers.t.cpp
